<resources>
    <string name="app_name">Zenly</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="step">Current step is:</string>
    <string name="no">No step yet</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="zenly_clone">Zenly Clone</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="map">Map</string>

    <string name="profile">Profile</string>
    <string name="top">top</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="search_friends">Search Friends</string>
    <string name="search_users">Search Users</string>

    <string name="forgot_your_password">Forgot your password?</string>
    <string name="logout">Logout</string>
    <string name="steps">Steps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steplink">StepLink</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Prefer Not to Say</item>
    </string-array>

</resources>