<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragments.ProfileFragment">

    <!-- Gender Spinner for gender options -->

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_toStartOf="@+id/usernameTextView"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/circle_background"
        app:layout_constraintEnd_toStartOf="@+id/usernameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_picture"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/outline_add_a_photo_24"
        android:contentDescription="Change picture"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="128dp"
        android:padding="16dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBirthdateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:text="Birthdate"
        app:layout_constraintBottom_toTopOf="@+id/tvStep"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelectBirthdate"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvBirthdateValue"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tvStep"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelectBirthdate"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/buttonSelectBirthdate"
        android:layout_width="77dp"
        android:layout_height="43dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="23dp"
        android:text="Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvGenderLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBio"
        android:layout_width="372dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:hint="Enter a small bio"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/spinnerGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:text="Gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBio" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="183dp"
        android:layout_height="24dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelectBirthdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/tvGenderLabel" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="187dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="157dp"
        android:padding="16dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <TextView
        android:id="@+id/tvStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="143dp"
        android:padding="16dp"
        android:text="@string/step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectBirthdate" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

</androidx.constraintlayout.widget.ConstraintLayout>
