<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragments.FriendProfileFragment">

    <!-- Gender Spinner for gender options -->

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_toStartOf="@+id/usernameTextView"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="131dp"
        android:hint="@string/username"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvBirthdateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text="Birthdate"
        app:layout_constraintBottom_toTopOf="@+id/tvStep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderLabel"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/tvBirthdateValue"
        android:layout_width="116dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="126dp"
        android:hint="N/A"
        android:padding="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tvStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvBirthdateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderValue"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="372dp"
        android:layout_height="50dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="N/A"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <TextView
        android:id="@+id/tvGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="Gender"
        app:layout_constraintEnd_toStartOf="@+id/tvGenderValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBio" />

    <TextView
        android:id="@+id/tvGenderValue"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="128dp"
        android:hint="N/A"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBio" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/email"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvBio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profileImageView" />

    <TextView
        android:id="@+id/tvStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:padding="16dp"
        android:text="@string/step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
